# archive

./: README.md
apixu-cpp/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
apixu-cpp/dev/: Dockerfile-api  Dockerfile-build  api.py  cpplint.py
apixu-cpp/examples/: CMakeLists.txt  conditions.cpp  current.cpp  forecast.cpp  history.cpp  search.cpp
apixu-cpp/include/apixu/: apixu.h  time.h
apixu-cpp/src/: apixu.cpp
apixu-cpp/tests/: CMakeLists.txt  apixu_conditions_test.cpp  apixu_current_test.cpp  apixu_forecast_test.cpp  apixu_history_test.cpp  apixu_search_test.cpp  apixu_test.cpp  http_client_mock.cpp
cpp-learn/: CMakeLists.txt  Makefile  README.md
cpp-learn-algorithms-and-data-structures/: .clang-format  001_two_number_sum.cpp  002_validate_subsequence.cpp  003_find_closest_value_in_bst.cpp  004_branch_sums.cpp  005_node_depths.cpp  006_depth_first_search.cpp  007_nth_fibonacci.cpp  008_product_sum.cpp  009_binary_search.cpp  010_find_three_largest_numbers.cpp  011_bubble_sort.cpp  012_insertion_sort.cpp  013_selection_sort.cpp  014_palindrome_check.cpp  015_caesar_cipher_encryptor.cpp  016_run_length_encoding.cpp  017_three_number_sum.cpp  018_smallest_difference.cpp  019_move_element_to_end.cpp  020_monotonic_array.cpp  021_spiral_traverse.cpp  022_longest_peak.cpp  023_array_of_products.cpp  024_bst_construction.cpp  025_validate_bst.cpp  026_bst_traversal.cpp  027_min_height_bst.cpp  028_invert_binary_tree.cpp  029_binary_tree_diameter.cpp  030_find_successor.cpp  031_max_subset_sum_no_adjacent.cpp  032_number_of_ways_to_make_change.cpp  033_min_number_of_coins_for_change.cpp  034_levenshtein_distance.cpp  035_kadanes_algorithm.cpp  036_single_cycle_check.cpp  037_breadth_first_search.cpp  CMakeLists.txt  Makefile
cpp-learn/algorithms/: CMakeLists.txt  binary_search.cpp  bubble_sort.cpp  fibonacci.cpp
cpp-learn/data_structures/: CMakeLists.txt  queue.cpp  serialize_binary_tree.cpp  singly_linked_list.cpp  singly_linked_list_thread_safe.cpp  singly_linked_list_unique_ptr.cpp  stack.cpp
cpp-learn/exercises/: CMakeLists.txt  anagram.cpp  change_key_in_map_or_set.cpp  cheatsheets.cpp  check_if_two_numbers_add_up_to_k.cpp  encapsulation_bypass.cpp  extract_words_from_string.cpp  is_even.cpp  job_scheduler.cpp  mask_email_address.cpp  print_numbers_from_1_to_n.cpp  products_of_numbers.cpp  record_last_n_orders.cpp  run_length_encoding.cpp  runtime_polymorphism_without_virtual_functions.cpp  store_object_in_file.cpp  store_pointers.cpp  trim_string.cpp  unique_string.cpp  word_palindrome.cpp
cpp-learn/exercises/stl_algorithms/: CMakeLists.txt  copy_vector.cpp
cpp-learn/experiments/: 000_placement_new.cpp  001_properties_lists.cpp  002_params_vs_struct.cpp  003_overload_slice_problem.cpp  004_static_executor_cpp17.cpp  005_static_executor_encapsulate_tuple.cpp  006_static_map.cpp  007_iterator_concept.cpp  008_filtered_value.cpp  009_has_method_concept.cpp  010_fp.cpp  011_enum_list.cpp  012_compile_time_validation.cpp  013_lambda_polymorphism.cpp  014_duplicate_code_policy_based.cpp  CMakeLists.txt
cpp-learn/numbers/: CMakeLists.txt  binary.cpp
cpp-learn/stl/: CMakeLists.txt  access_control.cpp  aliases.cpp  alignment.cpp  atexit.cpp  attributes.cpp  cast.cpp  class_ambiguity_resolution.cpp  class_virtual_bases.cpp  const_correctness.cpp  constructor_destructor_copy_move.cpp  copy_base.cpp  copy_on_write.cpp  decay.cpp  deleted_functions.cpp  enum.cpp  exchange.cpp  feature_testing.cpp  friends.cpp  function_object_functor.cpp  generated_types.cpp  header.cpp  header.h  header_main.cpp  inheriting_constructors.cpp  interface_inheritance.cpp  keywords_and_constructs.cpp  lambda.cpp  library_supported_language_features.cpp  move_semantics.cpp  multiple_inheritance.cpp  mutable.cpp  namespace.cpp  nothrow.cpp  operator_overloading.cpp  operator_overloading_ambiguities.cpp  operator_overloading_conversion.cpp  pointer_to_function.cpp  pointers_to_members.cpp  resource_invariants.cpp  (+16 more)
cpp-learn/stl/algorithms/: CMakeLists.txt  binary_search.cpp  c_library.cpp  comparison.cpp  execution_policies.cpp  heap.cpp  min_max.cpp  modifying_sequence.cpp  nonmodifying_sequence.cpp  numeric.cpp  other_operations_on_sorted_ranges.cpp  partitioning.cpp  permutation.cpp  set.cpp  sorting.cpp  uninitialized_memory.cpp
cpp-learn/stl/c_standard_library/: CMakeLists.txt  c_standard_library.c
cpp-learn/stl/compatibility/: CMakeLists.txt  compatibility.cpp
cpp-learn/stl/concurrency/: CMakeLists.txt  atomics_and_volatile.cpp
cpp-learn/stl/containers/: CMakeLists.txt  array.cpp  bitset.cpp  builtin_array.cpp  copying_containers.cpp  deque.cpp  forward_list.cpp  list.cpp  map.cpp  moving_containers.cpp  pair.cpp  priority_queue.cpp  queue.cpp  range_checking.cpp  set.cpp  stack.cpp  string.cpp  string_implementation.cpp  tuple.cpp  unordered_map.cpp  valarray.cpp  vector.cpp  vector_bool.cpp
cpp-learn/stl/error_handling/: CMakeLists.txt  assertions.cpp  exceptions.cpp  exceptions_basic.cpp  system_error.cpp  terminate.cpp
cpp-learn/stl/filesystem/: CMakeLists.txt  filesystem.cpp
cpp-learn/stl/headers/: CMakeLists.txt  algorithms.cpp  concurrency.cpp  (+11 more)
cpp-learn/templates/: CMakeLists.txt  concepts.cpp  constexpr_if.cpp  curiously_recurring_template_pattern.cpp  default_function_template_arguments.cpp  explicit_instantiation.cpp  implementation_specialization.cpp  integer_sequences.cpp  interface_specialization.cpp  loop_unrolling.cpp  nesting.cpp  parameters_pack.cpp  point.cpp  printf.cpp  recursion.cpp  reference_deduction.cpp  selecting_a_function.cpp  selection.cpp  specialization.cpp  specialization_and_overloading.cpp  specialization_basic.cpp  templates_as_arguments.cpp  tuple.cpp  units.cpp  value_parameter.cpp  variable_template.cpp
cpp-learn/tests/: CMakeLists.txt  MyQueue.cpp  MyQueue.h  MyQueueTest.cpp  MyService.cpp  MyService.h  MyServiceTest.cpp  Queue.h
rs-unit-tests-logger-mock/: Cargo.toml  README.md
rs-unit-tests-logger-mock/src/: cli.rs  logger.rs  main.rs  task.rs  test_logger.rs
rs-unit-tests-logger-mock/tests/: some_task.rs
(+347 files in other folders)
