cmake_minimum_required(VERSION 3.17)
project(algo)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -Wall -Wextra -Werror")

add_executable(001_two_number_sum 001_two_number_sum.cpp)
add_executable(002_validate_subsequence 002_validate_subsequence.cpp)
add_executable(003_find_closest_value_in_bst 003_find_closest_value_in_bst.cpp)
add_executable(004_branch_sums 004_branch_sums.cpp)
add_executable(005_node_depths 005_node_depths.cpp)
add_executable(006_depth_first_search 006_depth_first_search.cpp)
add_executable(007_nth_fibonacci 007_nth_fibonacci.cpp)
add_executable(008_product_sum 008_product_sum.cpp)
add_executable(009_binary_search 009_binary_search.cpp)
add_executable(010_find_three_largest_numbers 010_find_three_largest_numbers.cpp)
add_executable(011_bubble_sort 011_bubble_sort.cpp)
add_executable(012_insertion_sort 012_insertion_sort.cpp)
add_executable(013_selection_sort 013_selection_sort.cpp)
add_executable(014_palindrome_check 014_palindrome_check.cpp)
add_executable(015_caesar_cipher_encryptor 015_caesar_cipher_encryptor.cpp)
add_executable(016_run_length_encoding 016_run_length_encoding.cpp)
add_executable(017_three_number_sum 017_three_number_sum.cpp)
add_executable(018_smallest_difference 018_smallest_difference.cpp)
add_executable(019_move_element_to_end 019_move_element_to_end.cpp)
add_executable(020_monotonic_array 020_monotonic_array.cpp)
add_executable(021_spiral_traverse 021_spiral_traverse.cpp)
add_executable(022_longest_peak 022_longest_peak.cpp)
add_executable(023_array_of_products 023_array_of_products.cpp)
add_executable(024_bst_construction 024_bst_construction.cpp)
add_executable(025_validate_bst 025_validate_bst.cpp)
add_executable(026_bst_traversal 026_bst_traversal.cpp)
add_executable(027_min_height_bst 027_min_height_bst.cpp)
add_executable(028_invert_binary_tree 028_invert_binary_tree.cpp)
add_executable(029_binary_tree_diameter 029_binary_tree_diameter.cpp)
add_executable(030_find_successor 030_find_successor.cpp)
add_executable(031_max_subset_sum_no_adjacent 031_max_subset_sum_no_adjacent.cpp)
add_executable(032_number_of_ways_to_make_change 032_number_of_ways_to_make_change.cpp)
add_executable(033_min_number_of_coins_for_change 033_min_number_of_coins_for_change.cpp)
add_executable(034_levenshtein_distance 034_levenshtein_distance.cpp)
add_executable(035_kadanes_algorithm 035_kadanes_algorithm.cpp)
add_executable(036_single_cycle_check 036_single_cycle_check.cpp)
add_executable(037_breadth_first_search 037_breadth_first_search.cpp)
