add_subdirectory(stl_algorithms)

add_executable(exercises.anagram anagram.cpp)
add_executable(exercises.run_length_encoding run_length_encoding.cpp)
add_executable(exercises.word_palindrome word_palindrome.cpp)
add_executable(exercises.unique_string unique_string.cpp)
add_executable(exercises.check_if_two_numbers_add_up_to_k check_if_two_numbers_add_up_to_k.cpp)
add_executable(exercises.products_of_numbers products_of_numbers.cpp)
add_executable(exercises.job_scheduler job_scheduler.cpp)
target_link_libraries(exercises.job_scheduler pthread)
add_executable(exercises.record_last_n_orders record_last_n_orders.cpp)
add_executable(exercises.print_numbers_from_1_to_n print_numbers_from_1_to_n.cpp)
add_executable(exercises.is_even is_even.cpp)
add_executable(exercises.extract_words_from_string extract_words_from_string.cpp)
add_executable(exercises.mask_email_address mask_email_address.cpp)
add_executable(exercises.trim_string trim_string.cpp)
add_executable(exercises.change_key_in_map_or_set change_key_in_map_or_set.cpp)
add_executable(exercises.encapsulation_bypass encapsulation_bypass.cpp)
add_executable(exercises.store_pointers store_pointers.cpp)
add_executable(exercises.store_object_in_file store_object_in_file.cpp)
add_executable(exercises.runtime_polymorphism_without_virtual_functions runtime_polymorphism_without_virtual_functions.cpp)
add_executable(exercises.cheatsheets cheatsheets.cpp)
