add_subdirectory(error_handling)
add_subdirectory(containers)
add_subdirectory(iterators)
add_subdirectory(numerics)
add_subdirectory(algorithms)
add_subdirectory(memory_and_resources)
add_subdirectory(utilities)
add_subdirectory(strings)
add_subdirectory(regex)
add_subdirectory(io_streams)
add_subdirectory(locales)
add_subdirectory(concurrency)
add_subdirectory(threads_and_tasks)
add_subdirectory(c_standard_library)
add_subdirectory(compatibility)
add_subdirectory(headers)
add_subdirectory(inline)
add_subdirectory(filesystem)

add_executable(stl.function_object_functor function_object_functor.cpp)
add_executable(stl.aliases aliases.cpp)
add_executable(stl.rvalue rvalue.cpp)
add_executable(stl.struct struct.cpp)
add_executable(stl.enum enum.cpp)
add_executable(stl.union union.cpp)
add_executable(stl.nothrow nothrow.cpp)
add_executable(stl.lambda lambda.cpp)
add_executable(stl.pointer_to_function pointer_to_function.cpp)
add_executable(stl.namespace namespace.cpp)
add_executable(stl.header header.cpp header_main.cpp)
add_executable(stl.atexit atexit.cpp)
add_executable(stl.operator_overloading operator_overloading.cpp)
add_executable(stl.sizeof sizeof.cpp)
add_executable(stl.constructor_destructor_copy_move constructor_destructor_copy_move.cpp)
add_executable(stl.copy_base copy_base.cpp)
add_executable(stl.swap swap.cpp)
add_executable(stl.deleted_functions deleted_functions.cpp)
add_executable(stl.operator_overloading_conversion operator_overloading_conversion.cpp)
add_executable(stl.operator_overloading_ambiguities operator_overloading_ambiguities.cpp)
add_executable(stl.user_defined_literals user_defined_literals.cpp)
add_executable(stl.inheriting_constructors inheriting_constructors.cpp)
add_executable(stl.access_control access_control.cpp)
add_executable(stl.pointers_to_members pointers_to_members.cpp)
add_executable(stl.return_type_relaxation return_type_relaxation.cpp)
add_executable(stl.smart_pointer smart_pointer.cpp)
add_executable(stl.class_ambiguity_resolution class_ambiguity_resolution.cpp)
add_executable(stl.class_virtual_bases class_virtual_bases.cpp)
add_executable(stl.cast cast.cpp)
add_executable(stl.sort sort.cpp)
add_executable(stl.friends friends.cpp)
add_executable(stl.interface_inheritance interface_inheritance.cpp)
add_executable(stl.template_vs_inheritance template_vs_inheritance.cpp)
add_executable(stl.generated_types generated_types.cpp)
add_executable(stl.copy_on_write copy_on_write.cpp)
add_executable(stl.slicing slicing.cpp)
add_executable(stl.resource_invariants resource_invariants.cpp)
add_executable(stl.library_supported_language_features library_supported_language_features.cpp)
add_executable(stl.types types.cpp)
add_executable(stl.mutable mutable.cpp)
add_executable(stl.runtime_type_information_misuse runtime_type_information_misuse.cpp)
add_executable(stl.keywords_and_constructs keywords_and_constructs.cpp)
add_executable(stl.const_correctness const_correctness.cpp)
add_executable(stl.multiple_inheritance multiple_inheritance.cpp)
add_executable(stl.alignment alignment.cpp)
add_executable(stl.move_semantics move_semantics.cpp)
add_executable(stl.structured_bindings structured_bindings.cpp)
add_executable(stl.selection_statements_with_initializer selection_statements_with_initializer.cpp)
add_executable(stl.decay decay.cpp)
add_executable(stl.exchange exchange.cpp)
add_executable(stl.attributes attributes.cpp)
add_executable(stl.feature_testing feature_testing.cpp)
