add_executable(templates.reference_deduction reference_deduction.cpp)
add_executable(templates.nesting nesting.cpp)
add_executable(templates.concepts concepts.cpp)
add_executable(templates.value_parameter value_parameter.cpp)
add_executable(templates.templates_as_arguments templates_as_arguments.cpp)
add_executable(templates.default_function_template_arguments default_function_template_arguments.cpp)
add_executable(templates.specialization_basic specialization_basic.cpp)
add_executable(templates.specialization specialization.cpp)
add_executable(templates.interface_specialization interface_specialization.cpp)
add_executable(templates.implementation_specialization implementation_specialization.cpp)
add_executable(templates.specialization_and_overloading specialization_and_overloading.cpp)
add_executable(templates.explicit_instantiation explicit_instantiation.cpp)
add_executable(templates.selecting_a_function selecting_a_function.cpp)
add_executable(templates.selection selection.cpp)
add_executable(templates.recursion recursion.cpp)
add_executable(templates.printf printf.cpp)
add_executable(templates.parameters_pack parameters_pack.cpp)
add_executable(templates.tuple tuple.cpp)
add_executable(templates.units units.cpp)
add_executable(templates.point point.cpp)
add_executable(templates.loop_unrolling loop_unrolling.cpp)
add_executable(templates.curiously_recurring_template_pattern curiously_recurring_template_pattern.cpp)
add_executable(templates.variable_template variable_template.cpp)
add_executable(templates.integer_sequences integer_sequences.cpp)
add_executable(templates.constexpr_if constexpr_if.cpp)
