add_executable(stl.containers.copying_containers copying_containers.cpp)
add_executable(stl.containers.moving_containers moving_containers.cpp)
add_executable(stl.containers.range_checking range_checking.cpp)
add_executable(stl.containers.list list.cpp)
add_executable(stl.containers.map map.cpp)
add_executable(stl.containers.unordered_map unordered_map.cpp)
add_executable(stl.containers.priority_queue priority_queue.cpp)
add_executable(stl.containers.vector vector.cpp)
add_executable(stl.containers.deque deque.cpp)
add_executable(stl.containers.forward_list forward_list.cpp)
add_executable(stl.containers.set set.cpp)
add_executable(stl.containers.queue queue.cpp)
add_executable(stl.containers.stack stack.cpp)
add_executable(stl.containers.array array.cpp)
add_executable(stl.containers.bitset bitset.cpp)
add_executable(stl.containers.string_implementation string_implementation.cpp)
add_executable(stl.containers.string string.cpp)
add_executable(stl.containers.valarray valarray.cpp)
add_executable(stl.containers.builtin_array builtin_array.cpp)
add_executable(stl.containers.vector_bool vector_bool.cpp)
add_executable(stl.containers.pair pair.cpp)
add_executable(stl.containers.tuple tuple.cpp)
