add_executable(stl.iterators.iterators iterators.cpp)
add_executable(stl.iterators.stream_iterators stream_iterators.cpp)
add_executable(stl.iterators.iterator_traits iterator_traits.cpp)
add_executable(stl.iterators.check_if_last_element check_if_last_element.cpp)
add_executable(stl.iterators.find_all find_all.cpp)
add_executable(stl.iterators.operations operations.cpp)
add_executable(stl.iterators.iterator_adaptors iterator_adaptors.cpp)
add_executable(stl.iterators.find_last_position find_last_position.cpp)
add_executable(stl.iterators.range_access_functions range_access_functions.cpp)
add_executable(stl.iterators.function_objects function_objects.cpp)
add_executable(stl.iterators.function_adaptors function_adaptors.cpp)
